--- a/clock/style.css
+++ b/clock/style.css
@@ -9,7 +9,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    color: #17D4FE;
+    color: #fed417;
     font-size: 60px;
     font-family: Orbitron;
     letter-spacing: 7px;
