--- a/Pomodoro timer 2/style.css
+++ b/Pomodoro timer 2/style.css
@@ -1,6 +1,7 @@
 body{
   font-size: 14px;
-  background: #222;
+  background-image: linear-gradient(to right bottom, #50116e, #36155c, #1f1448, #100f32, #03011d);    background-repeat: no-repeat;
+  background-size: cover;
   color: #e7e7e7;
   margin: 0;
   margin: 0;
