--- a/Pomodoro timer/style.css
+++ b/Pomodoro timer/style.css
@@ -1,11 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:500');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400');
+
 body {
   min-width: 320px;
-  color: #50116e;
-  background: rgba(0, 0, 0, 0.741)
-    url('https://res.cloudinary.com/justusft/image/upload/c_scale,w_1920/v1497599245/4975166968_470ce30e30_o_ujyeh7.jpg')
-    no-repeat
-    center
-    center ;
+  color: white;
+  text-shadow: 1px 1px 10px rgb(189, 196, 255);
+  background-image: linear-gradient(to right bottom, #7a1ba7, #36155c, #1f1448, #100f32, #03011d);    background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Quicksand', sans-serif;
   font-size: 16px;
@@ -42,7 +43,7 @@ body {
 
 #checks > .check {
   opacity: 0.25;
-  color: #084963;
+  color: #7a1ba7;
 }
 
 #phase {
@@ -66,12 +67,18 @@ body {
 }
 
 #timer {
+  font-family: 'Roboto Mono', monospace;
+
   font-size: 4em;
   z-index: 1;
   line-height: 240px;
-  border: 4px solid #50116e;
+  color: white;
+  text-shadow: 1px 1px 10px rgb(189, 196, 255);
+  border: 4px solid #fff;
+  box-shadow: 1px 1px 10px rgb(189, 196, 255);;
   border-radius: 100%;
   box-sizing: border-box;
+
 }
 
 input[type=text] {
@@ -83,16 +90,16 @@ input[type=text] {
   font-size: 1em;
   width: 2em;
   height: 2em;
-  color: #084963;
+  color: #7a1ba7;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #50116e;
+  border-bottom: 1px solid #7a1ba7;
   box-sizing: border-box;
 }
 
 #timer-controls > button {
   font-size: 1em;
-  color: #084963;
+  color: #7a1ba7;
   background-color: transparent;
   border: none;
   padding: 0.5em;
@@ -103,7 +110,7 @@ footer{
 }
 a {
   text-decoration: none;
-  color: #084963;
+  color: #fff;
 }
 
 @media screen and (max-width: 768px) {
